--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,49 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Set up Docker Compose
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt-get -yqq install docker-compose
+          docker-compose --version
+
+      - name: Start MySQL and CSA Backend
+        run: |
+          docker-compose up -d
+          docker-compose ps
+
+      - name: Wait for MySQL to be ready
+        run: dockerize -wait tcp://localhost:3306 -timeout 1m
+
+      - name: Wait for CSA Backend to be ready
+        run: dockerize -wait http://localhost:8081/actuator/health -timeout 1m
+
+      - name: Run Tests
+        run: |
+          curl -X POST \
+          -H "Content-Type: application/json" \
+          -d '{
+            "codeFormation": "L3INFO",
+            "diplome": "L",
+            "n0Annee": 3,
+            "nomFormation": "Licence d'Informatique",
+            "doubleDiplome": "N",
+            "debutHabilitation": "2012-09-01T00:00:00Z",
+            "finHabilitation": "2016-09-01T00:00:00Z"
+          }' \
+          http://localhost:8081/api/formation/create
+
+      - name: Stop MySQL and CSA Backend
+        run: docker-compose down
