--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,10 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
+      - name: Set up Docker Compose and dockerize
         run: |
           sudo apt-get -yqq install docker-compose
           docker-compose --version
+          wget https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz
+          tar -xzvf dockerize-linux-amd64-v0.6.1.tar.gz
+          sudo mv dockerize /usr/local/bin/dockerize
+          dockerize --version
 
       - name: Start MySQL and CSA Backend
         run: |
