--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,9 +29,17 @@ jobs:
           docker-compose up -d
           docker-compose ps
 
+          # Obtenez l'adresse IP du conteneur GitLab Runner
+          runner_ip=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $HOSTNAME)
+          echo "Adresse IP du conteneur GitLab Runner: $runner_ip"
+
+          # Remplacez localhost par l'adresse IP du conteneur GitLab Runner dans le fichier docker-compose.yml
+          sed -i "s/localhost/$runner_ip/" docker-compose.yml
+
       - name: Afficher les journaux du serveur MySQL
         run: docker-compose logs mysql | (sleep 30 && cat)
 
+      
 
       - name: Attendre que le backend CSA soit prêt
         run: |
@@ -47,6 +55,7 @@ jobs:
 
       - name: Exécuter les tests
         run: |
+          # Utilisez l'adresse IP du conteneur GitLab Runner dans l'URL
           curl -X POST \
           -H "Content-Type: application/json" \
           -d '{
@@ -58,7 +67,7 @@ jobs:
             "debutHabilitation": "2012-09-01T00:00:00Z",
             "finHabilitation": "2016-09-01T00:00:00Z"
           }' \
-          http://localhost:8081/api/formation/create
+          http://$runner_ip:8081/api/formation/create
 
       - name: Arrêter MySQL et CSA Backend
         run: docker-compose down
@@ -75,3 +84,4 @@ jobs:
 
       - name: Vérifier l'état des services Docker
         run: docker-compose ps
+
