--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,13 +32,17 @@ jobs:
       - name: Attendre que MySQL soit prêt
         run: dockerize -wait tcp://localhost:3306 -timeout 5m  # Augmenter le timeout à 5 minutes
 
-      - name: Afficher les journaux du serveur MySQL
-        run: docker-compose logs mysql
+      - name: Afficher les journaux complets du serveur MySQL
+        run: |
+          container_name=$(docker-compose ps -q mysql)
+          sleep 30  # Ajouter un délai supplémentaire pour s'assurer que MySQL a terminé son initialisation
+          logs=$(docker logs $container_name)
+          echo "$logs"
 
       - name: Attendre que le backend CSA soit prêt
         run: |
           container_name=$(docker-compose ps -q csa-backend)
-          timeout=10  # Réduire le timeout pour le backend
+          timeout=10
           while [ $timeout -gt 0 ]; do
             logs=$(docker logs $container_name 2>&1)
             echo "$logs"
