--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,7 @@ jobs:
         run: docker-compose -f docker-compose-mysql.yml up -d
           
       - name: Attendre 1m30 après le lancement de MySQL
-        run: sleep 90
+        run: sleep 30
 
       - name: Afficher les journaux du serveur MySQL
         run: docker-compose -f docker-compose-mysql.yml logs
@@ -60,11 +60,16 @@ jobs:
           }' \
           http://localhost:8081/api/formation/create
 
-      - name: Afficher le contenu de la table FORMATION dans MySQL
+      - name: Afficher Table MySQL
         run: |
           # Utilisez la commande docker exec pour exécuter la requête MySQL
           docker exec -i $(docker-compose -f docker-compose-mysql.yml ps -q mysql) mysql -uroot -proot csa -e "SHOW TABLES;"
 
+
+      - name: Afficher le contenu de la table FORMATION dans MySQL
+        run: |
+          # Utilisez la commande docker exec pour exécuter la requête MySQL
+          docker exec -i $(docker-compose -f docker-compose-mysql.yml ps -q mysql) mysql -uroot -proot csa -e "SELECT * FROM formation;"
       
       - name: Arrêter les services
         run: docker-compose -f docker-compose-mysql.yml -f docker-compose-csa.yml down
